--- a/_posts/python/ternary/2015-06-30-ternary.html
+++ b/_posts/python/ternary/2015-06-30-ternary.html
@@ -7,7 +7,7 @@ thumbnail: thumbnail/ternary.jpg
 layout: user-guide
 name: Ternary
 language: python
-display_as: chart_type
+display_as: scientific
 has_thumbnail: true
 page_type: example_index
 order: 32
@@ -44,7 +44,7 @@ order: 32
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
@@ -59,7 +59,7 @@ order: 32
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 
 <div class="output_text output_subarea output_execute_result">
@@ -83,7 +83,7 @@ order: 32
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.offline</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -156,7 +156,7 @@ d("fill"),"none"!==e.fill&&c(t,e,r,d),u(t,e,r,{axis:"y"}),void u(t,e,r,{axis:"x"
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">rawData</span> <span class="o">=</span> <span class="p">[</span>
@@ -181,7 +181,7 @@ d("fill"),"none"!==e.fill&&c(t,e,r,d),u(t,e,r,{axis:"y"}),void u(t,e,r,{axis:"x"
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[6]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="k">def</span> <span class="nf">makeAxis</span><span class="p">(</span><span class="n">title</span><span class="p">,</span> <span class="n">tickangle</span><span class="p">):</span> 
@@ -204,7 +204,7 @@ d("fill"),"none"!==e.fill&&c(t,e,r,d),u(t,e,r,{axis:"y"}),void u(t,e,r,{axis:"x"
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">data</span> <span class="o">=</span> <span class="p">[{</span> 
@@ -230,7 +230,7 @@ d("fill"),"none"!==e.fill&&c(t,e,r,d),u(t,e,r,{axis:"y"}),void u(t,e,r,{axis:"x"
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[8]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">layout</span> <span class="o">=</span> <span class="p">{</span>
@@ -259,7 +259,7 @@ d("fill"),"none"!==e.fill&&c(t,e,r,d),u(t,e,r,{axis:"y"}),void u(t,e,r,{axis:"x"
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">fig</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;data&#39;</span><span class="p">:</span> <span class="n">data</span><span class="p">,</span> <span class="s">&#39;layout&#39;</span><span class="p">:</span> <span class="n">layout</span><span class="p">}</span>
@@ -289,7 +289,7 @@ d("fill"),"none"!==e.fill&&c(t,e,r,d),u(t,e,r,{axis:"y"}),void u(t,e,r,{axis:"x"
 <div class="output_area"><div class="prompt"></div>
 
 <div class="output_html rendered_html output_subarea ">
-<div id="dfed379f-4530-4a6d-b999-793c63c8b80c" style="height: 525; width: 100%;" class="plotly-graph-div"></div><script type="text/javascript">require(["plotly"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL="https://plot.ly";Plotly.newPlot("dfed379f-4530-4a6d-b999-793c63c8b80c", [{"a": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], "c": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], "b": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], "text": ["point 1", "point 2", "point 3", "point 4", "point 5", "point 6", "point 7", "point 8", "point 9", "point 10", "point 11"], "mode": "markers", "marker": {"color": "#DB7365", "symbol": 100, "line": {"width": 2}, "size": 14}, "type": "scatterternary"}], {"paper_bgcolor": "#fff1e0", "annotations": [{"y": 1.3, "text": "Simple Ternary Plot with Markers", "font": {"size": 15}, "showarrow": false, "x": 0.5}], "ternary": {"bgcolor": "#fff1e0", "sum": 100, "baxis": {"tickfont": {"size": 15}, "title": "<br>Developer", "tickangle": 45, "ticklen": 5, "showgrid": true, "titlefont": {"size": 20}, "showline": true, "tickcolor": "rgba(0,0,0,0)"}, "caxis": {"tickfont": {"size": 15}, "title": "<br>Designer", "tickangle": -45, "ticklen": 5, "showgrid": true, "titlefont": {"size": 20}, "showline": true, "tickcolor": "rgba(0,0,0,0)"}, "aaxis": {"tickfont": {"size": 15}, "title": "Journalist", "tickangle": 0, "ticklen": 5, "showgrid": true, "titlefont": {"size": 20}, "showline": true, "tickcolor": "rgba(0,0,0,0)"}}}, {"linkText": "Export to plot.ly", "showLink": true})});</script>
+<div id="03cb386e-867e-42c7-9756-ba84fe7a584c" style="height: 525; width: 100%;" class="plotly-graph-div"></div><script type="text/javascript">require(["plotly"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL="https://plot.ly";Plotly.newPlot("03cb386e-867e-42c7-9756-ba84fe7a584c", [{"a": [75, 70, 75, 5, 10, 10, 20, 10, 15, 10, 20], "c": [0, 20, 5, 35, 10, 0, 10, 70, 80, 80, 70], "b": [25, 10, 20, 60, 80, 90, 70, 20, 5, 10, 10], "text": ["point 1", "point 2", "point 3", "point 4", "point 5", "point 6", "point 7", "point 8", "point 9", "point 10", "point 11"], "mode": "markers", "marker": {"color": "#DB7365", "symbol": 100, "line": {"width": 2}, "size": 14}, "type": "scatterternary"}], {"paper_bgcolor": "#fff1e0", "annotations": [{"y": 1.3, "text": "Simple Ternary Plot with Markers", "font": {"size": 15}, "showarrow": false, "x": 0.5}], "ternary": {"bgcolor": "#fff1e0", "sum": 100, "baxis": {"tickfont": {"size": 15}, "title": "<br>Developer", "tickangle": 45, "ticklen": 5, "showgrid": true, "titlefont": {"size": 20}, "showline": true, "tickcolor": "rgba(0,0,0,0)"}, "caxis": {"tickfont": {"size": 15}, "title": "<br>Designer", "tickangle": -45, "ticklen": 5, "showgrid": true, "titlefont": {"size": 20}, "showline": true, "tickcolor": "rgba(0,0,0,0)"}, "aaxis": {"tickfont": {"size": 15}, "title": "Journalist", "tickangle": 0, "ticklen": 5, "showgrid": true, "titlefont": {"size": 20}, "showline": true, "tickcolor": "rgba(0,0,0,0)"}}}, {"linkText": "Export to plot.ly", "showLink": true})});</script>
 </div>
 
 </div>
