update ternary for python 3

--- a/_posts/python/getting-started/2015-06-30-getting-started.html
+++ b/_posts/python/getting-started/2015-06-30-getting-started.html
@@ -4,7 +4,7 @@ description: Getting Started with Plotly for Python
 name: Getting Started Plotly for Python
 has_thumbnail: false
 thumbnail: thumbnail/getting-started.jpg
-layout: base
+layout: getstart
 language: python
 title: Getting Started Plotly for Python
 page_type: u-guide
