--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -3,7 +3,7 @@ title: Getting Started Plotly for Python
 name: Getting Started Plotly for Python
 permalink: python/getting-started/
 description: Getting Started with Plotly for Python.
-layout: base
+layout: getstart
 language: python
 ---
 
