getting started edit

--- a/_posts/pandas/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/pandas/getting-started/2015-05-25-getting-started_python_index.html
@@ -1,5 +1,5 @@
 ---
-title: Getting Started Plotly for Pandas
+title: Getting Started with Plotly for Pandas
 name: Getting Started Plotly for Pandas
 permalink: pandas/getting-started/
 description: Getting Started with Plotly for Pandas.
