getting started edit

--- a/_posts/pandas/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/pandas/getting-started/2015-05-25-getting-started_python_index.html
@@ -1,13 +1,13 @@
 ---
 title: Getting Started with Plotly for Pandas
-name: Getting Started Plotly for Pandas
+name: Getting Started with Plotly for Pandas
 permalink: pandas/getting-started/
 description: Getting Started with Plotly for Pandas.
 layout: getstart
 language: pandas
 ---
 
-<h1>Getting Started: Plotly for Pandas</h1>
+<h1>Getting Started&#58; Plotly for Pandas</h1>
 
     {% include python-getting-started.html %}
 
