--- a/_posts/pandas/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/pandas/getting-started/2015-05-25-getting-started_python_index.html
@@ -1,6 +1,6 @@
 ---
-title: Getting Started with Plotly for Pandas
-name: Getting Started with Plotly for Pandas
+title: Getting Started&#58; Plotly for Pandas
+name: Getting Started&#58; Plotly for Pandas
 permalink: pandas/getting-started/
 description: Getting Started with Plotly for Pandas.
 layout: getstart
