getting started edits

--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -1,13 +1,13 @@
 ---
-title: Getting Started Plotly for MATLAB
-name: Getting Started Plotly for MATLAB
+title: Getting Started with Plotly for MATLAB
+name: Getting Started with Plotly for MATLAB
 permalink: matlab/getting-started/
-description: Getting Started with Plotly for MATLAB.
+description: Get started with Plotly's MATLAB graphing library to make interactive, publication-quality graphs online.
 layout: getstart
 language: matlab
 ---
 
-<h1>Getting started: Plotly for MATLAB</h1>
+<h1>Getting started with Plotly for MATLAB</h1>
 
     <section class="section">
         <h2>Installation</h2>
