--- a/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
+++ b/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
@@ -1,13 +1,13 @@
 ---
-title: Getting Started Plotly for Matplotlib
-name: Getting Started Plotly for Matplotlib
+title: Getting Started with Plotly for Matplotlib
+name: Getting Started with Plotly for Matplotlib
 permalink: matplotlib/getting-started/
 description: Plotly's Matplotlib graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
 language: matplotlib
 ---
 
-<h1>Getting started: Plotly for Matplotlib</h1>
+<h1>Getting started with Plotly for Matplotlib</h1>
 
     {% include python-getting-started.html %}
 
