--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -1,8 +1,8 @@
 ---
-title: Getting Started Plotly for Python
-name: Getting Started Plotly for Python
+title: Getting Started with Plotly for Python
+name: Getting Started with Plotly for Python
 permalink: python/getting-started/
-description: Getting Started with Plotly for Python.
+description: Get started with Plotly's Python graphing library to make interactive, publication-quality graphs online.
 layout: getstart
 language: python
 ---
