--- a/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
+++ b/_posts/nodejs/getting-started/2015-05-25-getting-started_node_js_index.html
@@ -1,13 +1,13 @@
 ---
-title: Getting Started Plotly for Node.js
-name: Getting Started Plotly for Node.js
-permalink: nodejs/getting-started//
+title: Getting Started with Plotly for Node.js
+name: Getting Started with Plotly for Node.js
+permalink: nodejs/getting-started/
 description: Plotly's Node.js graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
 language: nodejs
 ---
 
-<h1>Getting started: Plotly for Nodejs</h1>
+<h1>Getting started with Plotly for Nodejs</h1>
 
     <section class="section">
         <h2 >Installation</h2>
