Replace image link with CDN.
The Scala thumbnail is now served from a CDN, rather than from the docs themselves.

--- a/_posts/2016-04-13-scala-index.html
+++ b/_posts/2016-04-13-scala-index.html
@@ -11,11 +11,10 @@ language: scala
 	<div class="--welcome-body">
 		<!--div.--wrap-inner-->
 		<div class="--title">
-			<div class="--category-img"><img src="https://plot.ly/gh-pages/documentation/static/images/scala-small.jpg" alt=""></div>
+			<div class="--category-img"><img src="http://images.plot.ly/plotly-documentation/thumbnail/scala-small.jpg" alt=""></div>
 			<div class="--body">
 				<h1>Plotly Scala Library</h1>
-				<p>{{page.description}}</consectetur>
-				</p>
+				<p>{{page.description}}</p>
 			</div>
 		</div>
 	</div>
