--- a/_posts/python/3d-surface-coloring/2015-06-30-3d_surface_coloring.html
+++ b/_posts/python/3d-surface-coloring/2015-06-30-3d_surface_coloring.html
@@ -1,50 +1,103 @@
 ---
-permalink: python/3d-surface-color-mapping/
-description: Coloring the Surface of 3d plots
-title: 3D Surface Color Mapping
+permalink: python/3d-surface-coloring
+description: How to Color 3D Surface Plots in Python with Plotly.
+title: 3D Python Surface Coloring | plotly
 has_thumbnail: true
-thumbnail:
-has_thumbnail: false
+thumbnail: thumbnail/3d-scatter.jpg
 layout: user-guide
-page_type: u-guide
+name: 3D Surface Coloring
 language: python
+display_as: 3d_charts
+has_thumbnail: true
+page_type: example_index
+order: 1
 ---
 {% raw %}
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="3D-Surface-Coloring-in-Python">3D Surface Coloring in Python<a class="anchor-link" href="#3D-Surface-Coloring-in-Python">&#182;</a></h3>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
+Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
+
+</div>
+</div>
+</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[100]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">json</span>
-<span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
-<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
-<span class="kn">import</span> <span class="nn">math</span>
-<span class="kn">from</span> <span class="nn">plotly</span> <span class="kn">import</span> <span class="n">tools</span>
-<span class="kn">import</span> <span class="nn">copy</span>
-
-
-<span class="c">#data related to the ring cyclide is loaded</span>
-
-<span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="s">&#39;2381.json&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">data_file</span><span class="p">:</span>
-    <span class="n">fig</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">load</span><span class="p">(</span><span class="n">data_file</span><span class="p">)</span>
-
-
-<span class="n">data_original</span> <span class="o">=</span> <span class="n">fig</span><span class="p">[</span><span class="s">&#39;data&#39;</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>     <span class="c">#this will be trace0</span>
-
-<span class="n">data</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">fig</span><span class="p">[</span><span class="s">&#39;data&#39;</span><span class="p">])[</span><span class="mi">0</span><span class="p">]</span>        <span class="c">#trace1</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
+<span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
 </pre></div>
 
 </div>
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+
+
+<div class="output_text output_subarea output_execute_result">
+<pre>&apos;1.9.9&apos;</pre>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="3D-Surface-Plots-with-Subplots">3D Surface Plots with Subplots<a class="anchor-link" href="#3D-Surface-Plots-with-Subplots">&#182;</a></h4>
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[101]:</div>
+<div class="prompt input_prompt">In&nbsp;[&nbsp;]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">lx</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">data</span><span class="p">[</span><span class="s">&#39;z&#39;</span><span class="p">])</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">copy</span>
+<span class="kn">import</span> <span class="nn">json</span>
+<span class="kn">import</span> <span class="nn">math</span>
+<span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
+<span class="kn">from</span> <span class="nn">plotly</span> <span class="kn">import</span> <span class="n">tools</span>
+<span class="kn">import</span> <span class="nn">urllib2</span>
+
+<span class="c"># data related to the ring cyclide is loaded</span>
+
+<span class="n">response</span> <span class="o">=</span> <span class="n">urllib2</span><span class="o">.</span><span class="n">urlopen</span><span class="p">(</span><span class="s">&#39;https://plot.ly/~empet/2381.json&#39;</span><span class="p">)</span>
+<span class="n">data_file</span> <span class="o">=</span> <span class="n">response</span><span class="o">.</span><span class="n">read</span><span class="p">()</span>
+<span class="n">fig</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">loads</span><span class="p">(</span><span class="n">data_file</span><span class="p">)</span>
+
+<span class="c"># data related to the ring cyclide is loaded</span>
+
+
+<span class="n">data_original</span> <span class="o">=</span> <span class="n">fig</span><span class="p">[</span><span class="s">&#39;data&#39;</span><span class="p">][</span><span class="mi">0</span><span class="p">]</span>     <span class="c"># this will be trace0</span>
+
+<span class="n">data</span> <span class="o">=</span> <span class="n">copy</span><span class="o">.</span><span class="n">deepcopy</span><span class="p">(</span><span class="n">fig</span><span class="p">[</span><span class="s">&#39;data&#39;</span><span class="p">])[</span><span class="mi">0</span><span class="p">]</span>        <span class="c"># trace1</span>
+
+<span class="n">lx</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">data</span><span class="p">[</span><span class="s">&#39;z&#39;</span><span class="p">])</span>
 <span class="n">ly</span> <span class="o">=</span> <span class="nb">len</span><span class="p">(</span><span class="n">data</span><span class="p">[</span><span class="s">&#39;z&#39;</span><span class="p">][</span><span class="mi">0</span><span class="p">])</span>
 
 <span class="n">out</span> <span class="o">=</span> <span class="p">[]</span>
@@ -64,64 +117,9 @@ language: python
 <span class="k">print</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">out</span><span class="p">))</span>
 <span class="k">print</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">out</span><span class="p">[</span><span class="mi">0</span><span class="p">]))</span>
 
-<span class="n">data</span><span class="p">[</span><span class="s">&#39;surfacecolor&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">out</span>     <span class="c">#sets surface-color to distance from the origin</span>
-</pre></div>
+<span class="n">data</span><span class="p">[</span><span class="s">&#39;surfacecolor&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">out</span>     <span class="c"># sets surface-color to distance from the origin</span>
 
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>300
-300
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[102]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="k">print</span><span class="p">(</span><span class="n">data</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span>
-<span class="k">print</span><span class="p">(</span><span class="n">data_original</span><span class="o">.</span><span class="n">keys</span><span class="p">())</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>[u&apos;name&apos;, u&apos;colorscale&apos;, &apos;surfacecolor&apos;, u&apos;y&apos;, u&apos;x&apos;, u&apos;z&apos;, u&apos;type&apos;]
-[u&apos;name&apos;, u&apos;colorscale&apos;, u&apos;y&apos;, u&apos;x&apos;, u&apos;z&apos;, u&apos;type&apos;]
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[103]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="c">## This section deals with the layout of the plot</span>
+<span class="c"># This section deals with the layout of the plot</span>
 
 <span class="n">scene</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
     <span class="n">xaxis</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span>
@@ -142,7 +140,7 @@ language: python
         <span class="n">showbackground</span><span class="o">=</span><span class="bp">True</span><span class="p">,</span>
         <span class="n">backgroundcolor</span><span class="o">=</span><span class="s">&#39;rgb(230, 230,230)&#39;</span>
     <span class="p">),</span>
-    <span class="n">cameraposition</span> <span class="o">=</span> <span class="p">[[</span><span class="mf">0.2</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">,</span> <span class="mf">0.2</span><span class="p">],</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span> <span class="mf">3.5</span><span class="p">]</span>
+    <span class="n">cameraposition</span><span class="o">=</span><span class="p">[[</span><span class="mf">0.2</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">,</span> <span class="mf">0.5</span><span class="p">,</span> <span class="mf">0.2</span><span class="p">],</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">],</span> <span class="mf">3.5</span><span class="p">]</span>
 <span class="p">)</span>
 
 <span class="n">fig</span> <span class="o">=</span> <span class="n">tools</span><span class="o">.</span><span class="n">make_subplots</span><span class="p">(</span><span class="n">rows</span><span class="o">=</span><span class="mi">1</span><span class="p">,</span> <span class="n">cols</span><span class="o">=</span><span class="mi">2</span><span class="p">,</span>
@@ -162,27 +160,36 @@ language: python
 <span class="n">fig</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;scene1&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">scene</span><span class="p">)</span>
 <span class="n">fig</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;scene2&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">update</span><span class="p">(</span><span class="n">scene</span><span class="p">)</span>
 <span class="n">fig</span><span class="p">[</span><span class="s">&#39;layout&#39;</span><span class="p">][</span><span class="s">&#39;annotations&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="p">[</span>
-        <span class="nb">dict</span><span class="p">(</span>
-            <span class="n">x</span><span class="o">=</span><span class="mf">0.1859205</span><span class="p">,</span>
-            <span class="n">y</span><span class="o">=</span><span class="mf">0.95</span><span class="p">,</span>       <span class="c">#0.9395833,</span>
-            <span class="n">xref</span><span class="o">=</span><span class="s">&#39;x&#39;</span><span class="p">,</span>
-            <span class="n">yref</span><span class="o">=</span><span class="s">&#39;y&#39;</span><span class="p">,</span>
-            <span class="n">text</span><span class="o">=</span><span class="s">&#39;4th Dim Prop. to z&#39;</span><span class="p">,</span>
-            <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span>
-        <span class="p">),</span>
-            <span class="nb">dict</span><span class="p">(</span>
-            <span class="n">x</span><span class="o">=</span><span class="mf">0.858</span><span class="p">,</span>
-            <span class="n">y</span><span class="o">=</span><span class="mf">0.95</span><span class="p">,</span>
-            <span class="n">xref</span><span class="o">=</span><span class="s">&#39;x&#39;</span><span class="p">,</span>
-            <span class="n">yref</span><span class="o">=</span><span class="s">&#39;y&#39;</span><span class="p">,</span>
-            <span class="n">text</span><span class="o">=</span><span class="s">&#39;4th Dim Prop. to Distance from Origin&#39;</span><span class="p">,</span>
-            <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span>
-        <span class="p">)</span>
+    <span class="nb">dict</span><span class="p">(</span>
+        <span class="n">x</span><span class="o">=</span><span class="mf">0.1859205</span><span class="p">,</span>
+        <span class="n">y</span><span class="o">=</span><span class="mf">0.95</span><span class="p">,</span>       <span class="c"># 0.9395833,</span>
+        <span class="n">xref</span><span class="o">=</span><span class="s">&#39;x&#39;</span><span class="p">,</span>
+        <span class="n">yref</span><span class="o">=</span><span class="s">&#39;y&#39;</span><span class="p">,</span>
+        <span class="n">text</span><span class="o">=</span><span class="s">&#39;4th Dim Prop. to z&#39;</span><span class="p">,</span>
+        <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span>
+    <span class="p">),</span>
+    <span class="nb">dict</span><span class="p">(</span>
+        <span class="n">x</span><span class="o">=</span><span class="mf">0.858</span><span class="p">,</span>
+        <span class="n">y</span><span class="o">=</span><span class="mf">0.95</span><span class="p">,</span>
+        <span class="n">xref</span><span class="o">=</span><span class="s">&#39;x&#39;</span><span class="p">,</span>
+        <span class="n">yref</span><span class="o">=</span><span class="s">&#39;y&#39;</span><span class="p">,</span>
+        <span class="n">text</span><span class="o">=</span><span class="s">&#39;4th Dim Prop. to Distance from Origin&#39;</span><span class="p">,</span>
+        <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span>
+    <span class="p">)</span>
+<span class="p">]</span>
+</pre></div>
 
-    <span class="p">]</span>
+</div>
+</div>
+</div>
 
-
-<span class="n">plot_url</span> <span class="o">=</span> <span class="n">py</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;multiple_surface_plots&#39;</span><span class="p">,</span> <span class="n">auto_open</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">iplot</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;surface-coloring&#39;</span><span class="p">,</span> <span class="n">auto_open</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
 </pre></div>
 
 </div>
@@ -193,19 +200,15 @@ language: python
 <div class="output">
 
 
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>This is the format of your plot grid:
-[ (1,1) scene1 ]  [ (1,2) scene2 ]
+<div class="output_area"><div class="prompt output_prompt">Out[17]:</div>
 
-</pre>
-
+<div class="output_html rendered_html output_subarea output_execute_result">
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~kevintest/417.embed" height="800px" width="9000px"></iframe>
 </div>
+
 </div>
 
 </div>
 </div>
-<center>
-<iframe width="1000" height="800" frameborder="0" scrolling="no" src="https://plot.ly/~kevintest/333.embed"></iframe>
-</center>
+
 </div>{% endraw %}
