js tern redirect

--- a/_posts/plotly_js/ternary-plots/2016-04-13-ternary-plot_plotly_js_index.html
+++ b/_posts/plotly_js/ternary-plots/2016-04-13-ternary-plot_plotly_js_index.html
@@ -9,6 +9,7 @@ language: plotly_js
 page_type: example_index
 has_thumbnail: true
 display_as: basic
+redirect_from: javascript/ternary-plot/
 order: 1
 ---
 {% assign examples = site.posts | where:"language","plotly_js" | where:"suite","ternary-plot" | sort: "order" %}
