removed front matter for old user-guide

--- a/_posts/user_guide_python/2015-05-27-user-guide.html
+++ b/_posts/user_guide_python/2015-05-27-user-guide.html
@@ -1,12 +1,12 @@
 ---
-permalink: python/user-guide/
+<!-- permalink: python/user-guide/
 description: A User Guide for Plotly and its Python API Library
 name: Python User Guide | Plotly
 layout: user-guide
 thumbnail: /images/static-image.png
 language: python
 page_type: u-guide
-has_thumbnail: false
+has_thumbnail: false -->
 ---
 
 
