--- a/_posts/plotly_js/ternary-contour/2016-04-13-soil-types-ternary-fill-plot.html
+++ b/_posts/plotly_js/ternary-contour/2016-04-13-soil-types-ternary-fill-plot.html
@@ -2,7 +2,7 @@
 name: soil types ternary fill plot
 plot_url: https://codepen.io/plotly/embed/VaGrRB/?height=500&theme-id=15263&default-tab=result
 language: plotly_js
-suite: ternary-plot
+suite: ternary-contour
 order: 1
 sitemap: false
 arrangement: horizontal
