--- a/_posts/plotly_js/ternary-contour/2016-04-13-ternary-contour-plot_plotly_js_index.html
+++ b/_posts/plotly_js/ternary-contour/2016-04-13-ternary-contour-plot_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 title: Javascript Graphing Library D3.js-based Ternary Contour Plots | Examples | Plotly
-name: Ternary Plots
+name: Ternary Contour Plots
 permalink: javascript/ternary-contour/
 description: How to create D3.js-based ternary contour plots. Examples of Ternary Contour Plots with plotly.
 layout: base
