--- a/_posts/user_guide_python/2015-06-30-python_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-python_streaming.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/python-streaming/
+permalink: python/python-streaming
 description: Getting Started with Plotly Streaming
 title: Getting Started with Plotly Streaming
 has_thumbnail: true
@@ -89,7 +89,7 @@ title: Getting Started with Plotly Streaming
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Niw let's load the dependencies/packages that we need in order to get a simple stream going.</p>
+<p>Now let's load the dependencies/packages that we need in order to get a simple stream going.</p>
 
 </div>
 </div>
