added links to new examples + added subplot stream example

--- a/_posts/user_guide_python/2015-06-30-python_streaming.html
+++ b/_posts/user_guide_python/2015-06-30-python_streaming.html
@@ -26,8 +26,14 @@ title: Getting Started with Plotly Streaming
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Welcome to Plotly's Python API User Guide.</p>
-<blockquote><p>Links to the other sections can be found on the User Guide's <a href="https://plot.ly/python/user-guide#Table-of-Contents:">homepage</a></p>
+<blockquote><p>Links to the other sections can be found on the User Guide's <a href="https://plot.ly/python/user-guide#Table-of-Contents:">homepage</a>.</p>
 </blockquote>
+<p>If you want to skip ahead to other streaming examples, you can go to any of the following links:</p>
+<ul>
+<li><a href="https://plot.ly/python/multiple-axes/">https://plot.ly/python/multiple-axes/</a></li>
+<li><a href="https://plot.ly/python/geo-streaming">https://plot.ly/python/geo-streaming</a></li>
+<li><a href="https://plot.ly/python/subplot-streaming">https://plot.ly/python/subplot-streaming</a></li>
+</ul>
 
 </div>
 </div>
@@ -913,15 +919,20 @@ that the graphs are plotting identical data!).</p>
 <p>Simply put, Plotly's streaming API is awesome!</p>
 <p>In brief: to make a Plotly streaming plot:</p>
 <ol>
-<li><p>Make a <code>stream id object</code> (<code>Stream</code> in the <code>plotly.graph_objs</code> module) containing the <code>streaming token</code>(which is found in the <strong>settings</strong> of your Plotly account) and the maximum number of points to be keep on screen (which is optional).</p>
-</li>
-<li><p>Provide the <code>stream id object</code> as the key value for the <code>stream</code> attribute in your trace object.</p>
-</li>
-<li><p>Make a <code>stream link object</code> (<code>py.Stream</code>) containing the same stream token as the <code>stream id object</code> and open the stream with the <code>.open()</code> method.</p>
-</li>
-<li><p>Write data to the plot/your trace with the <code>.write()</code> method. When done, close the stream with the <code>.close()</code> method.</p>
-</li>
+<li>Make a <code>stream id object</code> (<code>Stream</code> in the <code>plotly.graph_objs</code> module) containing the <code>streaming token</code>(which is found in the <strong>settings</strong> of your Plotly account) and the maximum number of points to be keep on screen (which is optional).</li>
+<li>Provide the <code>stream id object</code> as the key value for the <code>stream</code> attribute in your trace object. </li>
+<li>Make a <code>stream link object</code> (<code>py.Stream</code>) containing the same stream token as the <code>stream id object</code> and open the stream with the <code>.open()</code> method.</li>
+<li>Write data to the plot/your trace with the <code>.write()</code> method. When done, close the stream with the <code>.close()</code> method.</li>
 </ol>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 
 </div>
 </div>
