minor issue with publisher, fixed!!

--- a/_posts/python/ternary-contour/2015-06-30-ternary-contour.html
+++ b/_posts/python/ternary-contour/2015-06-30-ternary-contour.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/ternary-contour/
+permalink: python/ternary-contour
 description: How to make Ternary Contour Plot in Python with Plotly.
 title: Python Ternary Contour Plots | plotly
 has_thumbnail: true
@@ -213,14 +213,14 @@ color:o.color,colorscale:o.colorscale,cauto:o.cauto,cmax:o.cmax,cmin:o.cmin,auto
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">layout</span> <span class="o">=</span> <span class="p">{</span>
     <span class="s">&#39;title&#39;</span><span class="p">:</span> <span class="s">&#39;Simple Ternary Contour Plot with Python&#39;</span><span class="p">,</span>
-    <span class="s">&#39;ternary&#39;</span><span class="p">:</span>
+    <span class="s">&#39;ternary&#39;</span><span class="p">:</span> 
         <span class="p">{</span>
         <span class="s">&#39;sum&#39;</span><span class="p">:</span><span class="mi">100</span><span class="p">,</span>
         <span class="s">&#39;aaxis&#39;</span><span class="p">:{</span><span class="s">&#39;title&#39;</span><span class="p">:</span> <span class="s">&#39;clay&#39;</span><span class="p">,</span> <span class="s">&#39;ticksuffix&#39;</span><span class="p">:</span><span class="s">&#39;%&#39;</span><span class="p">,</span> <span class="s">&#39;min&#39;</span><span class="p">:</span> <span class="mf">0.01</span><span class="p">,</span> <span class="s">&#39;linewidth&#39;</span><span class="p">:</span><span class="mi">2</span><span class="p">,</span> <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&#39;outside&#39;</span> <span class="p">},</span>
         <span class="s">&#39;baxis&#39;</span><span class="p">:{</span><span class="s">&#39;title&#39;</span><span class="p">:</span> <span class="s">&#39;sand&#39;</span><span class="p">,</span> <span class="s">&#39;ticksuffix&#39;</span><span class="p">:</span><span class="s">&#39;%&#39;</span><span class="p">,</span> <span class="s">&#39;min&#39;</span><span class="p">:</span> <span class="mf">0.01</span><span class="p">,</span> <span class="s">&#39;linewidth&#39;</span><span class="p">:</span><span class="mi">2</span><span class="p">,</span> <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&#39;outside&#39;</span> <span class="p">},</span>
         <span class="s">&#39;caxis&#39;</span><span class="p">:{</span><span class="s">&#39;title&#39;</span><span class="p">:</span> <span class="s">&#39;silt&#39;</span><span class="p">,</span><span class="s">&#39;ticksuffix&#39;</span><span class="p">:</span><span class="s">&#39;%&#39;</span><span class="p">,</span> <span class="s">&#39;min&#39;</span><span class="p">:</span> <span class="mf">0.01</span><span class="p">,</span> <span class="s">&#39;linewidth&#39;</span><span class="p">:</span><span class="mi">2</span><span class="p">,</span> <span class="s">&#39;ticks&#39;</span><span class="p">:</span><span class="s">&#39;outside&#39;</span> <span class="p">}</span>
     <span class="p">},</span>
-    <span class="s">&#39;showlegend&#39;</span><span class="p">:</span> <span class="bp">False</span>
+    <span class="s">&#39;showlegend&#39;</span><span class="p">:</span> <span class="bp">False</span>          
 <span class="p">}</span>
 </pre></div>
 
@@ -237,4 +237,33 @@ color:o.color,colorscale:o.colorscale,cauto:o.cauto,cmax:o.cmax,cmin:o.cmin,auto
 <h3 id="Create-the-figure-and-plot-the-graph:">Create the figure and plot the graph:<a class="anchor-link" href="#Create-the-figure-and-plot-the-graph:">&#182;</a></h3>
 </div>
 </div>
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">figure</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">data</span><span class="o">=</span><span class="n">traces</span><span class="p">,</span> <span class="n">layout</span><span class="o">=</span><span class="n">layout</span><span class="p">)</span>
+<span class="n">iplot</span><span class="p">(</span><span class="n">figure</span><span class="p">,</span> <span class="n">validate</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt"></div>
+
+<div class="output_html rendered_html output_subarea ">
+<div id="6b6aa798-3136-4965-9775-03669e8389e5" style="height: 525; width: 100%;" class="plotly-graph-div"></div><script type="text/javascript">require(["plotly"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL="https://plot.ly";Plotly.newPlot("6b6aa798-3136-4965-9775-03669e8389e5", [{"a": [0, 15, 20, 20, 5, 5, 0], "c": [30, 0, 0, 32, 42, 50, 50], "b": [70, 85, 80, 53, 53, 45, 50], "text": "sandy loam", "fillcolor": "#8dd3c7", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [20, 35, 35, 28, 20], "c": [0, 0, 20, 27, 32], "b": [80, 65, 45, 45, 53], "text": "sandy clay loam", "fillcolor": "#ffffb3", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [40, 40, 28, 28], "c": [15, 40, 52, 27], "b": [45, 20, 20, 45], "text": "clay loam", "fillcolor": "#bebada", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [0, 10, 15, 0], "c": [10, 0, 0, 30], "b": [90, 90, 85, 70], "text": "loamy sand", "fillcolor": "#fb8072", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [35, 35, 55], "c": [0, 20, 0], "b": [65, 45, 45], "text": "sandy clay", "fillcolor": "#80b1d3", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [60, 40, 40], "c": [40, 60, 40], "b": [0, 0, 20], "text": "silty clay", "fillcolor": "#fdb462", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [0, 28, 28, 12, 12, 0], "c": [50, 50, 72, 88, 80, 80], "b": [50, 22, 0, 0, 8, 20], "text": "silty loam", "fillcolor": "#b3de69", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [0, 10, 0], "c": [0, 0, 10], "b": [100, 90, 90], "text": "sand", "fillcolor": "#fccde5", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [28, 28, 40, 40], "c": [72, 52, 40, 60], "b": [0, 20, 20, 0], "text": "silty clay loam", "fillcolor": "#d9d9d9", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [55, 100, 60, 40, 40], "c": [0, 0, 40, 40, 15], "b": [45, 0, 0, 20, 45], "text": "clay", "fillcolor": "#bc80bd", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [0, 0, 12, 12], "c": [100, 80, 80, 88], "b": [0, 20, 8, 0], "text": "silt", "fillcolor": "#ccebc5", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}, {"a": [28, 28, 5, 5, 20], "c": [27, 50, 50, 42, 32], "b": [45, 22, 45, 53, 53], "text": "loam", "fillcolor": "#ffed6f", "line": {"color": "#444"}, "fill": "toself", "type": "scatterternary", "mode": "lines"}], {"showlegend": false, "ternary": {"sum": 100, "baxis": {"title": "sand", "linewidth": 2, "ticks": "outside", "ticksuffix": "%", "min": 0.01}, "caxis": {"title": "silt", "linewidth": 2, "ticks": "outside", "ticksuffix": "%", "min": 0.01}, "aaxis": {"title": "clay", "linewidth": 2, "ticks": "outside", "ticksuffix": "%", "min": 0.01}}, "title": "Simple Ternary Contour Plot with Python"}, {"linkText": "Export to plot.ly", "showLink": true})});</script>
+</div>
+
+</div>
+
+</div>
+</div>
+
 </div>{% endraw %}
