--- a/_posts/2016-04-28-r-shiny-gallery.html
+++ b/_posts/2016-04-28-r-shiny-gallery.html
@@ -1,7 +1,7 @@
 ---
 title: Plotly Shiny Gallery
 name: Plotly Shiny Gallery
-permalink: /shiny/gallery/
+permalink: shiny/gallery/
 description: Get started with Shiny applcations with this set of examples. A collection of practical Shiny applications for interactive graphing with Plotly, data science, technical computing, and more.
 layout: getstart
 language: r
