first pass at reordering docs to follow basic->advanced trend

--- a/_posts/python/line-plots/2015-06-30-lines.html
+++ b/_posts/python/line-plots/2015-06-30-lines.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/line-charts
+permalink: python/line-charts/
 description: How to make line charts in Python with Plotly. Examples on creating and styling line charts in Python with Plotly.
 title: Python Line Charts | plotly
 has_thumbnail: true
@@ -10,7 +10,7 @@ language: python
 display_as: basic
 has_thumbnail: true
 page_type: example_index
-order: 3
+order: 2
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
