--- a/_posts/python/tree-plot/2015-06-30-tree-plot.html
+++ b/_posts/python/tree-plot/2015-06-30-tree-plot.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/tree-plots
+permalink: python/tree-plots/
 description: How to make interactive tree-plot in Python with Plotly. An examples of a tree-plot in Plotly.
 title: Python Tree-plots | plotly
 has_thumbnail: true
@@ -7,10 +7,10 @@ thumbnail: thumbnail/treeplot.jpg
 layout: user-guide
 name: Tree-plots
 language: python
-display_as: scientific
+display_as: statistical
 has_thumbnail: true
 page_type: example_index
-order: 29
+order: 9
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -98,7 +98,7 @@ order: 29
 <span class="n">Ye</span> <span class="o">=</span> <span class="p">[]</span>
 <span class="k">for</span> <span class="n">edge</span> <span class="ow">in</span> <span class="n">E</span><span class="p">:</span>
     <span class="n">Xe</span><span class="o">+=</span><span class="p">[</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">0</span><span class="p">]][</span><span class="mi">0</span><span class="p">],</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">1</span><span class="p">]][</span><span class="mi">0</span><span class="p">],</span> <span class="bp">None</span><span class="p">]</span>
-    <span class="n">Ye</span><span class="o">+=</span><span class="p">[</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">0</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">1</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span> <span class="bp">None</span><span class="p">]</span> 
+    <span class="n">Ye</span><span class="o">+=</span><span class="p">[</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">0</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span><span class="mi">2</span><span class="o">*</span><span class="n">M</span><span class="o">-</span><span class="n">position</span><span class="p">[</span><span class="n">edge</span><span class="p">[</span><span class="mi">1</span><span class="p">]][</span><span class="mi">1</span><span class="p">],</span> <span class="bp">None</span><span class="p">]</span>
 
 <span class="n">labels</span> <span class="o">=</span> <span class="n">v_label</span>
 </pre></div>
@@ -133,7 +133,7 @@ order: 29
                   <span class="n">mode</span><span class="o">=</span><span class="s">&#39;markers&#39;</span><span class="p">,</span>
                   <span class="n">name</span><span class="o">=</span><span class="s">&#39;&#39;</span><span class="p">,</span>
                   <span class="n">marker</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">symbol</span><span class="o">=</span><span class="s">&#39;dot&#39;</span><span class="p">,</span>
-                                <span class="n">size</span><span class="o">=</span><span class="mi">18</span><span class="p">,</span> 
+                                <span class="n">size</span><span class="o">=</span><span class="mi">18</span><span class="p">,</span>
                                 <span class="n">color</span><span class="o">=</span><span class="s">&#39;#6175c1&#39;</span><span class="p">,</span>    <span class="c">#&#39;#DB4551&#39;, </span>
                                 <span class="n">line</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="s">&#39;rgb(50,50,50)&#39;</span><span class="p">,</span> <span class="n">width</span><span class="o">=</span><span class="mi">1</span><span class="p">)</span>
                                 <span class="p">),</span>
@@ -176,7 +176,7 @@ order: 29
                 <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">color</span><span class="o">=</span><span class="n">font_color</span><span class="p">,</span> <span class="n">size</span><span class="o">=</span><span class="n">font_size</span><span class="p">),</span>
                 <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">)</span>
         <span class="p">)</span>
-    <span class="k">return</span> <span class="n">annotations</span>  
+    <span class="k">return</span> <span class="n">annotations</span>
 </pre></div>
 
 </div>
@@ -204,15 +204,15 @@ order: 29
             <span class="n">showticklabels</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span>
             <span class="p">)</span>
 
-<span class="n">layout</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">title</span><span class="o">=</span> <span class="s">&#39;Tree with Reingold-Tilford Layout&#39;</span><span class="p">,</span>  
+<span class="n">layout</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span><span class="n">title</span><span class="o">=</span> <span class="s">&#39;Tree with Reingold-Tilford Layout&#39;</span><span class="p">,</span>
               <span class="n">annotations</span><span class="o">=</span><span class="n">make_annotations</span><span class="p">(</span><span class="n">position</span><span class="p">,</span> <span class="n">v_label</span><span class="p">),</span>
               <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="mi">12</span><span class="p">),</span>
               <span class="n">showlegend</span><span class="o">=</span><span class="bp">False</span><span class="p">,</span>
               <span class="n">xaxis</span><span class="o">=</span><span class="n">go</span><span class="o">.</span><span class="n">XAxis</span><span class="p">(</span><span class="n">axis</span><span class="p">),</span>
-              <span class="n">yaxis</span><span class="o">=</span><span class="n">go</span><span class="o">.</span><span class="n">YAxis</span><span class="p">(</span><span class="n">axis</span><span class="p">),</span>          
+              <span class="n">yaxis</span><span class="o">=</span><span class="n">go</span><span class="o">.</span><span class="n">YAxis</span><span class="p">(</span><span class="n">axis</span><span class="p">),</span>
               <span class="n">margin</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">l</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="n">r</span><span class="o">=</span><span class="mi">40</span><span class="p">,</span> <span class="n">b</span><span class="o">=</span><span class="mi">85</span><span class="p">,</span> <span class="n">t</span><span class="o">=</span><span class="mi">100</span><span class="p">),</span>
               <span class="n">hovermode</span><span class="o">=</span><span class="s">&#39;closest&#39;</span><span class="p">,</span>
-              <span class="n">plot_bgcolor</span><span class="o">=</span><span class="s">&#39;rgb(248,248,248)&#39;</span>          
+              <span class="n">plot_bgcolor</span><span class="o">=</span><span class="s">&#39;rgb(248,248,248)&#39;</span>
               <span class="p">)</span>
 </pre></div>
 
